<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <!-- Logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/chat_icon" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:defaultFocusHighlightEnabled="true">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:defaultFocusHighlightEnabled="true">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Sign in Button-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:padding="12dp"
            android:text="@string/action_sign_in" />

        <!-- Sign up suggestion -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/question"
                style="@style/TextColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="@string/action_sign_up_question"
                android:textColor="@color/white"
                android:textSize="16dip" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:gravity="left"
                android:paddingLeft="5dp"
                android:text="@string/action_sign_up_suggestion"
                android:textColor="@color/colorAccent"
                android:textSize="16dip" />
        </LinearLayout>

        <TextView
            android:id="@+id/link_forgot_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="110dp"
            android:gravity="center_horizontal"
            android:text="@string/forgote_password"
            android:textColor="@color/colorAccent"
            android:textSize="12dip" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="gone" />
</RelativeLayout>